src/Styles/App.css
.search-bar {
  width: 80%;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content:center;
}

.search {
  outline: none;
  background: none;
  margin: 2rem;
  width: 350px;
  height: 35px;
  border-radius: 5rem;
  color: white;
  font-size: 20px;
  padding: 1.5rem;
  border:2px solid white;
}

.content{
  width: 80%;
  justify-content: center;
  margin: 1rem auto;
  display: grid;
  grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
}

.character {
  background-color: rgb(255, 255, 255);
  color: rgb(45, 43, 43);
  border-radius: 1rem;
  padding: 10px;
  width:185px;
  margin-top:2rem;
  box-shadow: 10px 8px 8px 0 rgba(0, 0, 0, 0.8);
  transition:1s;
  max-height:250px;
}

p{
  color:white;
  text-align:center;
  font-size: 25px;
}

.character-img {
  position:relative;
  width:100%;
  height: 65%;
  transition: .5s;
  transition-delay:0;
  border-radius:1rem;
}

.character:hover {
  cursor:pointer;
}

.character:hover img{
  transform: scale(1.1);
}

.character .title {
  text-align: center;
  padding: 0;
  font-size: 17px;
  word-wrap:break-word;
}

.box-content {
  width: 100%;
  margin: 0 auto;
  height: 600px;
  background: linear-gradient(black, rgb(84, 84, 84));
  color: white;
  font-size: 1.3rem;
  text-align: justify;
  display:flex;
  align-items: center;
  justify-content: space-around;
}

.box-content .character-img {
  width:300px;
  height: 400px;
  border:1px solid white;
  box-shadow: 0 5px 5px 5px gray;
  border-radius:0rem;
  transform: rotate(20deg);
  transition: .5s
}

.box-content .character-img:hover {
  transform: rotate(-20deg);
}

.right-box {
  flex-basis:20%;
}

.left-box {
  flex-basis: 50%
}

.series-content {
  width: 80%;
  justify-content: center;
  margin: 1rem auto;
  display: grid;
  grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
}

.comic {
  background-color: rgb(255, 255, 255);
  color: rgb(45, 43, 43);
  border-radius: 1rem;
  padding: 20px;
  margin-top:2rem;
  margin:1rem;
  box-shadow: 10px 8px 8px 0 rgba(0, 0, 0, 0.8);
  transition:1s;
  cursor:pointer;
}

.comic-cover-container .comic-cover {
  width:100%;
  height: 250px;
  transition: 1.5s;
  transition-delay:0;
  border-radius:1rem;
}

.comic:hover {
  transform:scale(1.1);
}

.comic:hover img{
  transform:scale(1.1);
}

.comic-data-container {
  font-size: 5px;
}

